# django-trainiing

./: .gitignore  db.sqlite3  pyproject.toml  pytest.ini
albums/: admin.py  filter.py  forms.py  models.py  serializers.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_approved_and_more.py
albums/tests/: test_endpoints.py  test_serializer.py
artists/: froms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_user.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_endpoint.py
musicplatform/: RESULTS.md  settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_remove_user_password1_remove_user_password2_and_more.py  0004_user_password1_user_password2_alter_user_password.py
users/tests/: test_endpoints.py
