[tool.poetry]
name = "django-training"
version = "0.1.0"
description = ""
authors = ["amr mohamed <amrmohamed09@gmail.com>"]
readme = "README.md"
packages = [{include = "django_training"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
